# PhylEx

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Run.sh  build.sh  gencode_v19_gen_pos.complete.txt  load_modules.sh  run.sh
cn/: CMakeLists.txt  main.cpp  node.cpp  node.hpp
config/: main.config  simul.config
data/: mixture_binary.txt  mixture_linear.txt  mixture_multifurcating.txt  nodes_binary.txt  nodes_linear.txt  nodes_multifurcating.txt
simulation/: CMakeLists.txt  analysis.cpp  analysis.hpp  main.cpp  simul_config.cpp  simul_config.hpp  simul_data.cpp  simul_data.hpp
src/: CMakeLists.txt  bulk_datum.cpp  bulk_datum.hpp  clone_node.cpp  clone_node.hpp  compact_tssb_state.cpp  compact_tssb_state.hpp  data_util.cpp  data_util.hpp  expr_model.h  gene.cpp  gene.hpp  interface.cpp  interface.hpp  loci.cpp  loci.hpp  main.cpp  model_params.cpp  model_params.hpp  node.hpp  numerical_utils.cpp  numerical_utils.hpp  sampling_utils.cpp  sampling_utils.hpp  single_cell.cpp  single_cell.hpp  tssb_state.cpp  tssb_state.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  likelihood_test.R  main_test.cpp  posterior_test.cpp  test_dynamic_program.cpp  test_node.cpp  test_param_sampling.cpp  test_single_cell.cpp  test_tssb.cpp
